<resources>
    <string name="app_name">GithubUserApp</string>
    <string name="query_hint">Username</string>
    <string name="searching">Searching…</string>
    <string name="loading">Loading…</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="location">Location</string>
    <string name="follow">Follow</string>
    <string name="share">Share</string>
    <string name="followers">%d Followers</string>
    <string name="following">%d Following</string>
    <string name="company">Company</string>
    <string name="user_information">User Information</string>
    <string name="pub_repos">%d Public Repositories</string>
    <string name="repository">Repository</string>
    <string name="data_null">-</string>
    <string name="title_followers">Followers</string>
    <string name="title_following">Following</string>
    <string name="tabs_ke">%d tabs</string>
</resources>